# mate-user-guide

./: .build.yml  .travis.yml  AUTHORS  CNAME  HACKING  Makefile.am  NEWS  README  README.md  applications-menu.html  autogen.sh  basic-skills.html  bottom-panel.html  caja-accessnetwork.html  caja-backgrounds-and-emblems.html  caja-bookmarks.html  caja-browser-mode.html  caja-cdwriter-copy.html  caja-cdwriter-data.html  caja-cdwriter-writeimage.html  caja-cdwriter.html  caja-directories-file-systems.html  caja-dragndrop.html  caja-emblems.html  caja-extensions.html  caja-hidden-files.html  caja-icon.html  caja-location-bar.html  caja-open-file.html  caja-open-location.html  caja-permissions-overview.html  caja-permissions.html  caja-preferences.html  caja-presentation.html  caja-properties.html  caja-saving-searches.html  caja-searching.html  caja-select.html  caja-server-connect.html  caja-spatial-components.html  (+198 more)
.github/workflows/: archlinux.sh  debian.sh  fedora.sh  release.yml  ubuntu.sh
.tx/: config
mate-user-guide/: Makefile.am  mate-user-guide.pot
mate-user-guide/C/: glossary.xml  gosbasic.xml  goscaja.xml  goscustdesk.xml  gosdconf.xml  gosdconfkeys.sh  gosdconfkeys.xml  gosdconfkeys.xsl  goseditmainmenu.xml  gosfeedback.xml  gosoverview.xml  gospanel.xml  gosstartsession.xml  gostools.xml  index.docbook  legal.xml
mate-user-guide/C/figures/: org_mate_desktop_background_logical_view.sh  org_mate_desktop_background_only_logical_view.sh
mate-user-guide/af/: af.po
mate-user-guide/am/: am.po
mate-user-guide/ar/: ar.po
mate-user-guide/as/: as.po
mate-user-guide/ast/: ast.po
mate-user-guide/az/: az.po
mate-user-guide/be/: be.po
mate-user-guide/bg/: bg.po
mate-user-guide/bn/: bn.po
mate-user-guide/bn_IN/: bn_IN.po
mate-user-guide/br/: br.po
mate-user-guide/bs/: bs.po
mate-user-guide/ca/: ca.po
mate-user-guide/ca@valencia/: ca@valencia.po
mate-user-guide/cmn/: cmn.po
mate-user-guide/crh/: crh.po
mate-user-guide/cs/: cs.po
mate-user-guide/cy/: cy.po
mate-user-guide/da/: da.po
mate-user-guide/de/: de.po
mate-user-guide/dz/: dz.po
mate-user-guide/el/: el.po
mate-user-guide/en_AU/: en_AU.po
mate-user-guide/en_CA/: en_CA.po
mate-user-guide/en_GB/: en_GB.po
mate-user-guide/eo/: eo.po
mate-user-guide/es/: es.po
mate-user-guide/es_CO/: es_CO.po
mate-user-guide/et/: et.po
mate-user-guide/eu/: eu.po
mate-user-guide/fa/: fa.po
mate-user-guide/fi/: fi.po
mate-user-guide/fr/: fr.po
mate-user-guide/ga/: ga.po
mate-user-guide/gl/: gl.po
mate-user-guide/gu/: gu.po
mate-user-guide/he/: he.po
mate-user-guide/hi/: hi.po
mate-user-guide/hr/: hr.po
mate-user-guide/hu/: hu.po
mate-user-guide/hy/: hy.po
mate-user-guide/id/: id.po
mate-user-guide/ie/: ie.po
mate-user-guide/is/: is.po
mate-user-guide/it/: it.po
mate-user-guide/ja/: ja.po
mate-user-guide/ka/: ka.po
mate-user-guide/kk/: kk.po
mate-user-guide/kn/: kn.po
mate-user-guide/ko/: ko.po
mate-user-guide/ku/: ku.po
mate-user-guide/ku_IQ/: ku_IQ.po
mate-user-guide/ky/: ky.po
mate-user-guide/lt/: lt.po
mate-user-guide/lv/: lv.po
mate-user-guide/mai/: mai.po
mate-user-guide/mg/: mg.po
mate-user-guide/mk/: mk.po
mate-user-guide/ml/: ml.po
mate-user-guide/mn/: mn.po
mate-user-guide/mr/: mr.po
mate-user-guide/ms/: ms.po
mate-user-guide/nb/: nb.po
mate-user-guide/nds/: nds.po
mate-user-guide/ne/: ne.po
mate-user-guide/nl/: nl.po
mate-user-guide/nn/: nn.po
mate-user-guide/oc/: oc.po
mate-user-guide/or/: or.po
mate-user-guide/pa/: pa.po
mate-user-guide/pl/: pl.po
mate-user-guide/ps/: ps.po
mate-user-guide/pt/: pt.po
mate-user-guide/pt_BR/: pt_BR.po
mate-user-guide/ro/: ro.po
mate-user-guide/ru/: ru.po
mate-user-guide/si/: si.po
mate-user-guide/sk/: sk.po
mate-user-guide/sl/: sl.po
mate-user-guide/sq/: sq.po
mate-user-guide/sr/: sr.po
mate-user-guide/sr@latin/: sr@latin.po
mate-user-guide/sv/: sv.po
mate-user-guide/ta/: ta.po
mate-user-guide/te/: te.po
mate-user-guide/th/: th.po
mate-user-guide/tr/: tr.po
mate-user-guide/ug/: ug.po
mate-user-guide/uk/: uk.po
mate-user-guide/ur/: ur.po
mate-user-guide/uz/: uz.po
mate-user-guide/vi/: vi.po
mate-user-guide/xh/: xh.po
mate-user-guide/zh_CN/: zh_CN.po
mate-user-guide/zh_HK/: zh_HK.po
mate-user-guide/zh_TW/: zh_TW.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  (+119 more)
